--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -1,11 +1,13 @@
 ---
 import { Markdown as RemoteMarkdown } from "astro-remote";
 import MarkdownIt from "markdown-it";
+import { replaceCmsEmbeds } from "@mws-astro/util";
 import Blockquote from "@components/blockquote/blockquote.astro";
 import Icon from "@shared/icon.astro";
 import Mailbuild from "@components/mailbuild/mailbuild.astro";
 import Facebook from "@components/facebook/facebook.astro";
-const { content } = Astro.props;
+const content = await replaceCmsEmbeds(Astro.props.content);
+
 var md;
 
 // @ts-ignore
