Centralise some component glob code

--- a/src/components/layout/columns/columns.astro
+++ b/src/components/layout/columns/columns.astro
@@ -167,6 +167,7 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
   .columns {
     gap: var(--column-gap);
     padding: calc(var(--indent) * 0.5) var(--indent);
+    background-color: rgb(var(--background-color));
   }
 
   // .columns > {
