--- a/src/shared/astro/Navigation.astro
+++ b/src/shared/astro/Navigation.astro
@@ -125,7 +125,7 @@ const Wrapper = depth ? Fragment : "nav";
 <script>
   import {
     computePosition,
-    ComputePositionConfig,
+    type ComputePositionConfig,
     autoUpdate,
     offset,
     shift,
