--- a/src/components/layout/columns/columns.astro
+++ b/src/components/layout/columns/columns.astro
@@ -1,4 +1,6 @@
 ---
+import { bookshopName } from "@mws-astro/util";
+
 export interface Props {
   content_blocks: any[];
   collapse?: boolean;
@@ -12,26 +14,23 @@ const contentBlocks = Astro.props.content_blocks;
 
 const components: Record<string, any> = {};
 const componentImports = import.meta.glob(
-  [
-    "/src/mws-astro/src/components/**/*.jsx",
-    "/src/mws-astro/src/components/**/*.astro",
-  ],
+  ["/src/mws-astro/src/components/**/*.astro"],
   {
     eager: true,
   }
 );
 
-Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
-  const parts = path
-    .replace(/^.*components\//, "")
-    .split(".")[0]
-    .split("/");
-  if (parts.length > 1 && parts[parts.length - 1] === parts[parts.length - 2]) {
-    parts.pop();
-  }
-  const bookshopName = parts.join("/");
-  components[bookshopName] = obj.default;
+const componentOverrides = import.meta.glob(["/src/components/**/*.astro"], {
+  eager: true,
 });
+
+Object.entries(componentImports).forEach(
+  ([path, obj]: [string, any]) => (components[bookshopName(path)] = obj.default)
+);
+
+Object.entries(componentOverrides).forEach(
+  ([path, obj]: [string, any]) => (components[bookshopName(path)] = obj.default)
+);
 
 // const columnCount = contentBlocks.length;
 
