Update image to use imgix

--- a/src/components/image/image.astro
+++ b/src/components/image/image.astro
@@ -1,4 +1,5 @@
 ---
+import Imgix from "@shared/Imgix.astro";
 import Markdown from "@shared/Markdown.astro";
 import Lightbox from "@components/lightbox/lightbox.astro";
 import { convertColorString } from "@mws-astro/util";
@@ -42,8 +43,8 @@ const figcaption = title || description;
   style={{ ...(height && { "--height": height }) }}
 >
   <figure data-lightbox={lightbox && id}>
-    <img
-      src={image?.src || image}
+    <Imgix
+      image={image?.src || image}
       alt=""
       loading="lazy"
       decoding="async"
