--- a/src/shared/astro/Imgix.astro
+++ b/src/shared/astro/Imgix.astro
@@ -2,15 +2,6 @@
 import ImgixClient from "@imgix/js-core";
 import preferences from "@data/preferences.json";
 
-let fs: any, getPlaiceholder: any;
-// @ts-expect-error
-if (!ENV_BOOKSHOP_LIVE) {
-  fs = await import("node:fs/promises");
-  ({ getPlaiceholder } = await import("plaiceholder"));
-}
-// import fs from "node:fs/promises";
-// import { getPlaiceholder } from "plaiceholder";
-
 export interface Props {
   image: string;
   width?: number;
@@ -60,36 +51,44 @@ const path = Astro.site ? new URL(image, Astro.site) : image;
 const maxw = preferences.page.maximum_page_width;
 
 const file = "public" + image;
-// const { width: filew, height: fileh } = await (async () => {
-//   try {
-//     return sizeOf(file);
-//   } catch (err) {
-//     console.log(err);
-//     return { width: undefined, height: undefined };
-//   }
-// })();
 
-// const width = filew ? Math.min(filew, maxw) : maxw;
+let fs: any, getPlaiceholder: any;
+let base64, metadata;
+
+// @ts-expect-error
+if (!ENV_BOOKSHOP_LIVE) {
+  fs = await import("node:fs/promises");
+  ({ getPlaiceholder } = await import("plaiceholder"));
+
+  try {
+    const f = await fs.readFile(file);
+
+    ({ base64, metadata } = await getPlaiceholder(f));
+  } catch (err) {
+    console.log(err);
+  }
+}
 
 const src = imgix.buildURL(path.toString(), opts); // Fallback
 const srcset = imgix.buildSrcSet(path.toString(), opts);
 
-let base64, metadata;
-
-try {
-  const f = await fs.readFile(file);
-
-  ({ base64, metadata } = await getPlaiceholder(f));
-} catch (err) {
-  console.log(err);
-}
-
 let width = tWidth || metadata?.width;
-let height = ar ? Math.floor(width / ar) : tHeight || metadata?.height;
+let height = ar && width ? Math.floor(width / ar) : tHeight || metadata?.height;
 ---
 
-{placeholder && <img class="placeholder" src={base64} {width} {height} />}
-<img {srcset} {src} {alt} {loading} {decoding} {sizes} {width} {height} />
+{
+  placeholder && base64 && (
+    <img class="placeholder" src={base64} {width} {height} />
+  )
+}
+{
+  // @ts-expect-error
+  ENV_BOOKSHOP_LIVE ? (
+    <img src={image} {alt} {loading} {decoding} {width} {height} />
+  ) : (
+    <img {srcset} {src} {alt} {loading} {decoding} {sizes} {width} {height} />
+  )
+}
 
 <style>
   .placeholder {
